@@ -742,7 +742,10 @@ void properties_dialog (struct server *s) {
 }
 
 
-void combo_set_vals (GtkWidget *combo, GList *strlist, char *str) {
+void combo_set_vals (GtkWidget *combo, GList *strlist, const char *str) {
+
+  g_return_if_fail(GTK_IS_COMBO(combo));
+
   if (!strlist) {
     gtk_list_clear_items (GTK_LIST (GTK_COMBO (combo)->list), 0, -1);
   } else {
@@ -763,6 +766,10 @@ void combo_set_vals (GtkWidget *combo, GList *strlist, char *str) {
   if (str) {
     gtk_entry_set_text (GTK_ENTRY (GTK_COMBO (combo)->entry), str);
     gtk_entry_set_position (GTK_ENTRY (GTK_COMBO (combo)->entry), 0);
+  }
+  else
+  {
+    gtk_entry_set_text (GTK_ENTRY (GTK_COMBO (combo)->entry), "");
   }
 }
 
